Añado tags que se quedaron atrás
Pues eso: añado varios tags que no se incluyeron cuando se creó el
fichero

--- a/helloworld.html
+++ b/helloworld.html
@@ -1,4 +1,9 @@
-<html>
-    Hola Mundo! Está con acento.
+<!DOCTYPE html>
 
+<html>
+  <head>
+  </head>
+    <body>
+      Hola Mundo! Está con acento.
+    </body>
 </html>
